tests/NormalTests/paczka1/fuzzy1/41913205.err
Error in line 15: A980 A919 99,2
Error in line 16: A980 A554 90,6
Error in line 19: A980 A919 10,5
Error in line 18: 9Ow9 A980 26,9
Error in line 26: 6N0Id86 A554 43,9
